Changed world coordinates, added game camera
Changed the world coordinates.  Before, the XZ plane represented
the ground, and Y represented height, and the coordinates system
was left-handed.  Now, the XY plane representes the ground, and
Z represents height, and it is right-handed.

Also, included a basic game-camera class to track camera postion.

Change-Id: I053db69466d8537c67256da39eb2ca7f2b339d9c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,6 +207,8 @@ endif()
 set(zooshi_SRCS
     src/async_loader.cpp
     src/async_loader.h
+    src/camera.cpp
+    src/camera.h
     src/common.h
     src/flatbufferschemas
     src/glplatform.h
