Removed remaining references to Pie Noon.
Grepped for pie noon and replaced them with references to Zooshi where
appropriate.

Also updated Android.mk so that the android build would succeed.

Change-Id: Icf395a3dfe1e22d620f57ba2b3c4429efddd2997

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@ limitations under the License.
 -->
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.fpl.pie_noon"
+          package="com.google.fpl.zooshi"
           android:versionCode="4"
           android:versionName="1.0">
 
@@ -32,7 +32,7 @@ limitations under the License.
                   android:configChanges="orientation|keyboardHidden|screenSize">
             <!-- Tell NativeActivity the name of the .so -->
             <meta-data android:name="android.app.lib_name"
-                       android:value="pie_noon" />
+                       android:value="zooshi" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
