Using FPLBase's FPLActivity for shared code
Using FPLActivity from FPL Base as a base for ZooshiActivity, where
custom Zooshi code can go, which there is currently none of.

Change-Id: I66e12ea0f72f46212625ca2d4eb7bc185a38fca4

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ gen/
 local.properties
 proguard-project.txt
 src_java/org/
+src_java/com/google/fpl/fpl_base/
 
 # symlink to the Google Play Services library.
 google-play-services_lib
