Add IMGUI test function to zooshi project.
Change-Id: Ie9bdbd872a0dedab527bd394a1c41eaf9289e297
Tested: On OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,8 @@ set(zooshi_SRCS
     src/flatbufferschemas
     src/game.cpp
     src/game.h
+    src/gui.cpp
+    src/gui.h
     src/main.cpp
     src/rawassets
 )
