Added Rendermesh component
Added a component called RenderMesh, which contains a mesh, and
implies a transform component.  Every entity with a rendermesh
component will render its mesh to the screen during the render
phase.

Change-Id: I5e4a32a81528410ce15ca3f1b9cf7211ade67380

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,8 @@ set(zooshi_SRCS
     src/components/player.h
     src/components/rail_denizen.cpp
     src/components/rail_denizen.h
+    src/components/rendermesh.cpp
+    src/components/rendermesh.h
     src/components/transform.cpp
     src/components/transform.h
     src/entity/component.h
