Added mouselook to the camera.
Since the turret will be split off into it's own entity shortly (and
will therefore get implicit transformations from its parent) I've
decided to hold off on manually doing the composition of the rail
denizen's facing vector and the turret's facing vector.

Tested on Linux.

Change-Id: I959b69067f28cb312478f03f57be14664d91be3a

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -1,15 +1,16 @@
 {
-  "audio": {
-    "output_frequency": 44100,
-    "output_channels": "Stereo",
-    "output_buffer_size": 2048,
-    "mixer_channels": 16,
-    "bus_file": "buses.bin"
-  },
+  "audio_config": "audio_config.bin",
+
+  "input_config": "input_config.bin",
 
   "entity_list": [
     {
       "component_list": [
+        {
+          "data_type": "PlayerDef",
+          "data": {
+          }
+        },
         {
           "data_type": "RailDenizenDef",
           "data" : {
