Refactored out a game state class.
Added a gamestate class. This class owns the entities, the motivator
engine, and all the other core gamestate data.

The debug rotating cubes that were being draw for testing are no longer
being drawn.

Various other minor refactors were made as well.

Tested on linux.

Change-Id: I4ffaaed87d778667735941a48e0da976333f8217

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,6 +223,8 @@ set(zooshi_SRCS
     src/flatbufferschemas
     src/game.cpp
     src/game.h
+    src/game_state.cpp
+    src/game_state.h
     src/gui.cpp
     src/gui.h
     src/main.cpp
