Added a new FamilyComponent to the entities.
The RenderMesh component has been updated to not draw any entity with a
parent. Instead, parent entities recurse through all children rendering
them such that their respective transformations are multiplied together
appropriately.

Added an instrusive list class from Pindrop to handle the lists of
children without needing to allocate memory.

Transform components will now load their location from data when they
can. Scale and orientation are not yet supported.

Updated the rail denizen to support a start time so that other entities
can be at different points on a rail.

Change-Id: I4d701699641bcf6b4a65af23e62d19161eb7a838

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -9,7 +9,46 @@
       "component_list": [
         {
           "data_type": "PlayerDef",
+          "data": {}
+        },
+        {
+          "data_type": "RailDenizenDef",
+          "data" : {
+            "start_time": 0.0
+          }
+        }
+      ]
+    },
+    {
+      "component_list": [
+        {
+          "data_type": "PlayerDef",
           "data": {
+          }
+        },
+        {
+          "data_type": "FamilyDef",
+          "data": {
+            "children": [
+              {
+                "component_list": [
+                  {
+                    "data_type": "TransformDef",
+                    "data": {
+                      "position": {
+                        "x": 5.0,
+                        "y": 0.0,
+                        "z": 0.0
+                      }
+                    }
+                  },
+                  {
+                    "data_type": "RenderMeshDef",
+                    "data" : {}
+                  }
+                ]
+              }
+            ]
           }
         },
         {
@@ -17,6 +56,10 @@
           "data" : {
             "start_time": 0
           }
+        },
+        {
+          "data_type": "RenderMeshDef",
+          "data" : {}
         }
       ]
     }
