Abstracted player input through the BasePlayerController class
Player input is now routed via the BasePlayerController class,
which maps inputs from some other source (usually the input
manager) and converts them into generic logical inputs that the
game can consume, without having to care about where they were
generated.

Added a controller for basic mouselooking, and a controller for
cardboard-style android movement.

Also cleaned up some function signatures.

Tested on Android and Linux.

Change-Id: I63c45d43e90e803f38e0a662c25b192f021444e3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,9 @@ set(zooshi_SRCS
     src/entity/entity_manager.cpp
     src/entity/entity_manager.h
     src/entity/vector_pool.h
+    src/inputcontrollers/base_player_controller.h
+    src/inputcontrollers/mouse_controller.cpp
+    src/inputcontrollers/mouse_controller.h
     src/flatbufferschemas
     src/game.cpp
     src/game.h
