Added the ability to shoot projectiles by clicking.
Clicking now launches projectiles in the current facing direction.

Also includes some general component cleanup, and the ability to
specify meshes via flatbuffer file.

Change-Id: I62c23485d4190abff011a43bb3296acce131cd6a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,8 @@ set(zooshi_SRCS
     src/components/player.h
     src/components/family.cpp
     src/components/family.h
+    src/components/player_projectile.cpp
+    src/components/player_projectile.h
     src/components/rail_denizen.cpp
     src/components/rail_denizen.h
     src/components/rendermesh.cpp
