Refactored rails into a separate structure.
A single Rail object is now loaded at startup representing the rail that
all rail_denizens will follow. The rail to load is specified in
config.json.

Tested on linux.

Bug: 20553810

Change-Id: I785024fb2883746e63ef7e03bb585f03b74bbbf2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ foreach(flatbuffers_schema ${FLATBUFFERS_SCHEMAS})
   add_custom_command(
     OUTPUT ${flatbuffers_include}
     COMMAND flatc --gen-includes -o ${FLATBUFFERS_GENERATED_INCLUDES_DIR}
+        -I ${dependencies_fplbase_dir}/schemas
         -I ${dependencies_motive_dir}/schemas
         -I ${dependencies_pindrop_dir}/schemas -c ${flatbuffers_schema}
     DEPENDS flatc motive pindrop ${flatbuffers_schema})
