--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -3,6 +3,7 @@
 
   "input_config": "input_config.bin",
 
+  "rail_filename": "rails/circle.bin",
   "entity_list": [
     {
       "component_list": [
@@ -14,35 +15,7 @@
         {
           "data_type": "RailDenizenDef",
           "data" : {
-            "rail_def": {
-              "nodes" :[
-                {
-                  "time" : 0,
-                  "position" : {"x" : 0, "y" : -10, "z" : 10},
-                  "tangent" : {"x" : -0.003, "y" : 0, "z" : 0}
-                },
-                {
-                  "time" : 5000,
-                  "position" : {"x" : -10, "y" : 0, "z" : 10},
-                  "tangent" : {"x" : 0, "y" : 0.003, "z" : 0}
-                },
-                {
-                  "time" : 10000,
-                  "position" : {"x" : 0, "y" : 10, "z" : 10},
-                  "tangent" : {"x" : 0.003, "y" : 0, "z" : 0}
-                },
-                {
-                  "time" : 15000,
-                  "position" : {"x" : 10, "y" : 0, "z" : 10},
-                  "tangent" : {"x" : 0, "y" : -0.003, "z" : 0}
-                },
-                {
-                  "time" : 20000,
-                  "position" : {"x" : 0, "y" : -10, "z" : 10},
-                  "tangent" : {"x" : -0.003, "y" : 0, "z" : 0}
-                }
-              ]
-            }
+            "start_time": 0
           }
         }
       ]
