zooshi/cmake: pass cwebp location explicitly when building assets
Change-Id: I95a6bba13ad6f2be36298fe7caaac13356f6d111

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,9 +120,12 @@ add_custom_target(generated_includes DEPENDS ${FLATBUFFERS_GENERATED_INCLUDES})
 
 # Build rule that uses make to build the assets.
 get_property(flatc_location TARGET flatc PROPERTY LOCATION)
+get_property(cwebp_location TARGET cwebp PROPERTY LOCATION)
 add_custom_target(assets
   COMMAND python ${CMAKE_SOURCE_DIR}/scripts/build_assets.py
-                 --flatc ${flatc_location} --output ${CMAKE_BINARY_DIR}/assets
+  --flatc ${flatc_location}
+  --cwebp ${cwebp_location}
+  --output ${CMAKE_BINARY_DIR}/assets
   DEPENDS flatc cwebp)
 
 # zooshi source files.
