zooshi/cmake: fix cwebp variable override
variable should be set in the cache in order to override the option in
webp cmakefile.

Change-Id: Ie343d3be2ca7ddf3aaede6bd6dc47b30e1abff2e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,8 @@ if(NOT zooshi_only_flatc AND NOT TARGET fplbase)
   set(fplbase_build_mesh_pipeline OFF CACHE BOOL "")
   if(zooshi_build_cwebp)
     # enable cwebp build included in fplbase.
-    set(webp_build_cwebp ON)  
-  endif()  
+    set(webp_build_cwebp ON CACHE BOOL "")
+  endif()
   add_subdirectory("${dependencies_fplbase_dir}" ${tmp_dir}/fplbase)
 endif()
 
