Added a longer rail with straight lines.
Change-Id: Ib465e118f18dab3a33fd79b0f28effac72536e6a

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -3,7 +3,7 @@
 
   "input_config": "input_config.bin",
 
-  "rail_filename": "rails/circle.bin",
+  "rail_filename": "rails/long_path.bin",
   "entity_list": [
     {
       "component_list": [
