Remove resources for imgui and copy them from imgui/asset.
- Copy imgui resources in the build process.

Change-Id: I8d492b1472b4a082f59f16339b32d0c008cc115b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,12 @@ add_custom_target(assets
   --output ${CMAKE_BINARY_DIR}/assets
   DEPENDS flatc cwebp)
 
+# Copy imgui resource files (font files, shaders)
+add_custom_command(TARGET assets POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                       ${dependencies_imgui_dir}/assets
+                       ${CMAKE_BINARY_DIR}/assets)
+
 # zooshi source files.
 set(zooshi_SRCS
     src/camera.cpp
