--- a/src/rawassets/audio_config.json
+++ b/src/rawassets/audio_config.json
@@ -1,8 +1,10 @@
 {
-    "output_frequency": 44100,
-    "output_channels": "Stereo",
-    "output_buffer_size": 2048,
-    "mixer_channels": 16,
-    "bus_file": "buses.bin"
+  "output_frequency": 44100,
+  "output_channels": "Stereo",
+  "output_buffer_size": 2048,
+  "mixer_channels": 50,
+  "mixer_virtual_channels": 150,
+  "listeners": 1,
+  "bus_file": "buses.bin"
 }
 
