Added more meshes, and cleaned up assets
Assets now preload during initialization.  They still need to be
put in an asynchronous loading function with a loading screen, but
they'll at least all preload now.  The asset manifest is loaded
from a flatbuffer file.

Also removed some debug setup code that was no longer needed, from
gamestate::initialize.

Change-Id: I3c562eadb5790510351d564dd5eaed0e0e6f39f3

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -4,6 +4,9 @@
   "input_config": "input_config.bin",
 
   "rail_filename": "rails/long_path.bin",
+
+  "assets_filename": "assets.bin",
+
   "entity_list": [
     {
       "component_list": [
@@ -57,7 +60,6 @@
     }
   ],
 
-
   "projectile_speed": 2.0,
   "projectile_def": {
     "component_list": [
@@ -86,7 +88,33 @@
         "data_type": "PlayerProjectileDef",
         "data": {}
       },
+    ]
+  },
 
+  "fern_def": {
+    "component_list": [
+      {
+        "data_type": "TransformDef",
+        "data": {
+          "scale": {
+            "x": 350.0,
+            "y": 350.0,
+            "z": 350.0
+          },
+          "orientation": {
+            "x": 0.0,
+            "y": -90.0,
+            "z": 0.0
+          }
+        }
+      },
+      {
+        "data_type": "RenderMeshDef",
+        "data": {
+          "source_file": "meshes/fern_c.fplmesh",
+          "shader": "shaders/cardboard"
+        }
+      }
     ]
   }
 }
