Patron texture is now a crocodile.
Pipeline will now generate fplmesh binaries from
hand-written mesh json files. This allows us to
create simple geometry without using a modelling
program.

Pipeline also now processes an internal-only directory
of assets. These assets will never be released on
github.

Tested: Game works on Linux.
Change-Id: Ib0fc05d06be3f80b386c91b9853dee8eb6692d91

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -175,18 +175,18 @@
                   "data_type": "TransformDef",
                   "data": {
                     "scale": {
-                      "x": 350.0,
-                      "y": 350.0,
-                      "z": 350.0
+                      "x": 10.0,
+                      "y": 10.0,
+                      "z": 10.0
                     },
                     "position": {
                         "x": 0.0,
                         "y": 0.0,
-                        "z": 20.0
+                        "z": 0.0
                       },
                     "orientation": {
                       "x": 0.0,
-                      "y": -90.0,
+                      "y": 0.0,
                       "z": 0.0
                     }
                   }
@@ -194,7 +194,7 @@
                 {
                   "data_type": "RenderMeshDef",
                   "data": {
-                    "source_file": "meshes/fern_leafy.fplmesh",
+                    "source_file": "meshes/croc_moustache.fplmesh",
                     "shader": "shaders/textured"
                   }
                 },
@@ -252,5 +252,5 @@
          }
       },
     ]
-  }
+        }
 }
